# dsnview-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dsnapi.c  dsnapi.h  main.c
include/: dsnapi.h  util.h
src/: dsnapi.c  main.c  util.c
